# StockMaster

./: AGENTS.md  CMakeLists.txt  main.cpp
.github/workflows/: release.yml
docs/: _index.md  agent_rules.md  architecture.md  data_model.md  decisions.md  folder_structure.md  ui_guidelines.md  use_case.md
docs/project/: _index.md  application_services.md  build_and_run.md  current_features_and_gaps.md  domain_and_core.md  overview.md  source_map.md  ui_screens.md  user_guide.md  viewmodels.md
packaging/windows/: StockMasterInstaller.nsi
src/stockmaster/application/: customer_service.cpp  customer_service.h  order_service.cpp  order_service.h  payment_service.cpp  payment_service.h  product_service.cpp  product_service.h  report_service.cpp  report_service.h
src/stockmaster/core/: money.h
src/stockmaster/domain/: entities.h
src/stockmaster/infra/db/: database_service.cpp  database_service.h
src/stockmaster/ui/qml/: AppShell.qml  Main.qml
src/stockmaster/ui/qml/components/: MetricCard.qml  SectionHeader.qml
src/stockmaster/ui/qml/screens/: CustomersScreen.qml  DashboardScreen.qml  InventoryScreen.qml  OrdersScreen.qml  PaymentsScreen.qml  ProductsScreen.qml  ReportsScreen.qml  SettingsScreen.qml
src/stockmaster/ui/viewmodels/: app_view_model.cpp  app_view_model.h  customers_view_model.cpp  customers_view_model.h  inventory_view_model.cpp  inventory_view_model.h  orders_view_model.cpp  orders_view_model.h  payments_view_model.cpp  payments_view_model.h  products_view_model.cpp  products_view_model.h  reports_view_model.cpp  reports_view_model.h  settings_view_model.cpp  settings_view_model.h
tests/: dashboard_view_model_smoke.cpp  inventory_service_smoke.cpp  order_allocation_smoke.cpp  payment_service_smoke.cpp  report_service_smoke.cpp  sqlite_persistence_smoke.cpp
